# cookbook

./: README.md
examples/satellite-vlm/: README.md  prepare_vrsbench.py  pyproject.toml
examples/satellite-vlm/configs/: vrsbench_full_eval.yaml  vrsbench_multitask.yaml  vrsbench_multitask_modal.yaml  vrsbench_vqa_modal.yaml
examples/vlm-example/: .gitignore  Makefile  README.md  plan.md  pyproject.toml
examples/vlm-example/configs/: benchmark_claude_sonnet_goodsad.yaml  benchmark_claude_sonnet_mvtec.yaml  benchmark_claude_sonnet_visa.yaml  benchmark_lfm25_vl_450M_goodsad.yaml  benchmark_lfm25_vl_450M_mvtec.yaml  benchmark_lfm25_vl_450M_visa.yaml  benchmark_lfm25_vl_450M_visa_finetuned_lm_and_vision.yaml  benchmark_lfm25_vl_450M_visa_finetuned_lm_and_vision_ckpt100.yaml  benchmark_lfm25_vl_450M_visa_finetuned_lm_and_vision_ckpt200.yaml  benchmark_lfm25_vl_450M_visa_finetuned_lm_and_vision_ckpt300.yaml  benchmark_lfm25_vl_450M_visa_finetuned_lm_and_vision_ckpt357.yaml  benchmark_lfm25_vl_450M_visa_finetuned_lm_only_ckpt100.yaml  benchmark_lfm25_vl_450M_visa_finetuned_lm_only_ckpt200.yaml  benchmark_lfm25_vl_450M_visa_finetuned_lm_only_ckpt300.yaml  benchmark_lfm25_vl_450M_visa_finetuned_lm_only_ckpt357.yaml  finetune_lfm25_vl_450M_visa_lm_and_vision.yaml  finetune_lfm25_vl_450M_visa_lm_only.yaml
examples/vlm-example/src/vlm_example/: benchmark.py  benchmark_api.py  callbacks.py  config.py  data_preparation.py  finetune.py  inference.py  loaders.py  make_data_viz.py  modal_infra.py  output_types.py  paths.py  prepare_data.py  report.py
